--- a/source/debian/changelog
+++ b/source/debian/changelog
@@ -1,3 +1,11 @@
+logdata-anomaly-miner (0.0.2~pre0) xenial; urgency=low
+
+  * Package structure fixes from Debian mentoring procedure
+  * Bugfixes:
+    * ModuloTimeMatchRule: time object path was ignored on error
+
+ -- Roman Fiedler <roman.fiedler@ait.ac.at>  Mon, 20 Apr 2016 12:00:00 +0000
+
 logdata-anomaly-miner (0.0.1) xenial; urgency=low
 
   * Bugfixes
