--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -1,4 +1,4 @@
-V0.0.3 (Unreleased):
+V0.0.3 (2016-07-21):
 ====================
 
 * Backport of changes from Debian ITP process review, see
@@ -11,11 +11,11 @@ V0.0.3 (Unreleased):
     were not reported for an extended period of time.
   * Added VolatileLogarithmicBackoffEventHistory to keep data
     of limited number of events in memory for automated processing.
+  * AMinerRemoteControl: Added "--ExecFile" parameter to execute
+    commands from file, "--StringResponse" for direct output.
 * Bugfixes:
   * debian/postinst: disable service start when not already enabled
     using standard methods debian/rules and debian/postinst.
-* AMinerRemoteControl: Added "--ExecFile" parameter to execute
-  commands from file.
 
 
 V0.0.2 (2016-05-12):
