--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -1,3 +1,11 @@
+V0.0.4 (2016-xx-xx):
+====================
+
+* Bugfixes:
+  * Packaging: unowned directory after purge, see
+    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=832347
+
+
 V0.0.3 (2016-07-21):
 ====================
 
