Added helper class for parser matching process debugging. Cleanup of the MatchContext class also.

--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -1,6 +1,9 @@
 V0.0.5 (2016-09-??):
 ====================
 
+* New features:
+  * Added helper class for parser matching process debugging.
+  * Added minimal model for parsing Tomcat start/stop syslog messages.
 * Bugfixes:
   * Fixed file descriptor leak in PersistencyUtil.py on store
 
