Moved SimpleUnparsedAtomHandler.py from aminer.event to aminer.input.

--- a/source/debian/NEWS
+++ b/source/debian/NEWS
@@ -1,3 +1,13 @@
+logdata-anomaly-miner (0.0.5) xenial; urgency=low
+
+  Following API changes were introduced:
+
+    * SimpleUnparsedAtomHandler was moved from "aminer.events"
+      to "aminer.input".
+
+
+ -- Roman Fiedler <roman.fiedler@ait.ac.at>  Mon, 11 Oct 2016 08:00:00 +0000
+
 logdata-anomaly-miner (0.0.4) xenial; urgency=low
 
   Following API changes were introduced:
