--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -1,3 +1,9 @@
+V0.0.6 (2016-10-xx):
+====================
+
+* Bugfixes:
+  * Logic flaw in logfile rollover handling, selecting on bad fd.
+
 V0.0.5 (2016-10-11):
 ====================
 
