Bugfix: Unassigned, reused variable caused same logfile to be opened more than once. Renamed variables consistently.

--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -3,6 +3,8 @@ V0.0.6 (2016-10-xx):
 
 * Bugfixes:
   * Logic flaw in logfile rollover handling, selecting on bad fd.
+  * Unassigned, reused variable caused same logfile to be opened
+    more than once.
 
 V0.0.5 (2016-10-11):
 ====================
