--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -1,6 +1,9 @@
 V0.0.6 (2016-10-xx):
 ====================
 
+* New features:
+  * Added "LogAtom" and "AtomHandlerInterface" to pass data from
+    IO-layer to upper layers consistently.
 * Bugfixes:
   * Logic flaw in logfile rollover handling, selecting on bad fd.
   * Unassigned, reused variable caused same logfile to be opened
