--- a/source/debian/changelog
+++ b/source/debian/changelog
@@ -1,3 +1,11 @@
+logdata-anomaly-miner (0.0.7~pre0) xenial; urgency=low
+
+  New features:
+  * Datetime parsing reimplemented in DateTimeModelElement to
+    fix various shortcomings of strptime in Python and libc.
+
+ -- Roman Fiedler <roman.fiedler@ait.ac.at>  Wed,  7 Nov 2016 08:00:00 +0000
+
 logdata-anomaly-miner (0.0.6) xenial; urgency=low
 
   New features:
