--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -1,4 +1,4 @@
-V0.0.7 (2016-12-07):
+V0.0.7 (2016-12-22):
 ====================
 
 * New features:
@@ -7,6 +7,8 @@ V0.0.7 (2016-12-07):
   * ElementValueBranchModelElement added to support conditional
     branching.
   * DebugHistoryMatchRule added: keep history of matched LogAtoms.
+* Changes:
+  * Restructured AMinerUtils and utils package.
 
 
 V0.0.6 (2016-11-04):
