Improved logdata reading now also supporting connects to UNIX server sockets for reading. Also added docstrings, code formatting to make pylint happy and improve code readability.

--- a/source/debian/changelog
+++ b/source/debian/changelog
@@ -1,4 +1,4 @@
-logdata-anomaly-miner (0.0.7~pre0) xenial; urgency=low
+logdata-anomaly-miner (0.0.7~pre2) xenial; urgency=low
 
   New features:
   * Datetime parsing reimplemented in DateTimeModelElement to
@@ -6,8 +6,10 @@ logdata-anomaly-miner (0.0.7~pre0) xenial; urgency=low
   * ElementValueBranchModelElement added to support conditional
     branching.
   * DebugHistoryMatchRule added: keep history of matched LogAtoms.
+  * Unix socket input support: improved logdata reading now also
+    supporting connects to UNIX server sockets for reading.
 
- -- Roman Fiedler <roman.fiedler@ait.ac.at>  Wed,  7 Nov 2016 08:00:00 +0000
+ -- Roman Fiedler <roman.fiedler@ait.ac.at>  Mon,  9 Nov 2017 08:00:00 +0000
 
 logdata-anomaly-miner (0.0.6) xenial; urgency=low
 
