--- a/source/debian/changelog
+++ b/source/debian/changelog
@@ -1,4 +1,4 @@
-logdata-anomaly-miner (0.0.7~pre2) xenial; urgency=low
+logdata-anomaly-miner (0.0.7) xenial; urgency=low
 
   New features:
   * Datetime parsing reimplemented in DateTimeModelElement to
@@ -8,8 +8,10 @@ logdata-anomaly-miner (0.0.7~pre2) xenial; urgency=low
   * DebugHistoryMatchRule added: keep history of matched LogAtoms.
   * Unix socket input support: improved logdata reading now also
     supporting connects to UNIX server sockets for reading.
+  Changes:
+  * Restructured AMinerUtils and utils package.
 
- -- Roman Fiedler <roman.fiedler@ait.ac.at>  Mon,  9 Nov 2017 08:00:00 +0000
+ -- Roman Fiedler <roman.fiedler@ait.ac.at>  Mon,  9 Jan 2017 18:00:00 +0000
 
 logdata-anomaly-miner (0.0.6) xenial; urgency=low
 
