Added Base64StringModelElement for parsing of base64 strings. Performed __init__ code cleanup with pylint

--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -1,6 +1,8 @@
 V0.0.8 (2017-0x-xx):
 ====================
 
+* New features:
+  * Base64StringModelElement for parsing of base64 strings
 * Changes:
   * Various bugfixes
   * Code cleanup using pylint
