AnalysisChild full asynchronous remote control connection handling added.

--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -3,6 +3,8 @@ V0.0.8 (2017-0x-xx):
 
 * New features:
   * Base64StringModelElement for parsing of base64 strings
+  * AnalysisChild full asynchronous remote control connection
+    handling
 * Changes:
   * Various bugfixes
   * Code cleanup using pylint
