--- a/source/debian/changelog
+++ b/source/debian/changelog
@@ -1,3 +1,9 @@
+logdata-anomaly-miner (0.0.8~rc0) xenial; urgency=low
+
+  Dummy entry for current release candidate.
+
+ -- Roman Fiedler <roman.fiedler@ait.ac.at>  Mon, 16 Jan 2017 15:00:00 +0000
+
 logdata-anomaly-miner (0.0.7) xenial; urgency=low
 
   New features:
