Added EnhancedNewMatchPathValueComboDetector analysis component: Same as NewMatchPathValueComboDetector but also supporting value transformation and storage of extra data.

--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -8,6 +8,9 @@ V0.0.8 (2017-0x-xx):
     handling
   * MissingMatchPathValueDetector realerting support added
   * StringRegexMatchRule for matching parsed data using regex
+  * EnhancedNewMatchPathValueComboDetector added for more complex
+    value combination detection providing transformation, annotation,
+    features ...
 * Changes:
   * Various bugfixes
   * Code cleanup using pylint
