--- a/source/debian/NEWS
+++ b/source/debian/NEWS
@@ -1,3 +1,13 @@
+logdata-anomaly-miner (0.0.8) xenial; urgency=low
+
+  Apart from bugfixes, new parsing and analysis components were added:
+  * Base64StringModelElement
+  * DecimalFloatValueModelElement
+  * StringRegexMatchRule
+  * EnhancedNewMatchPathValueComboDetector
+
+ -- Roman Fiedler <roman.fiedler@ait.ac.at>  Tue, 30 May 2017 17:00:00 +0000
+
 logdata-anomaly-miner (0.0.7) xenial; urgency=low
 
   The datetime parsing DateTimeModelElement was reimplemented
