Added MissingMatchPathListValueDetector similar MissingMatchPathValueDetector but looking on more than one match path for key extraction.

--- a/source/debian/changelog
+++ b/source/debian/changelog
@@ -1,5 +1,7 @@
 logdata-anomaly-miner (0.0.9~pre0) xenial; urgency=low
 
+  Features:
+  * New MissingMatchPathListValueDetector to detect stream interuption
   Bugfixes:
   * AnalysisChild: handle remote control client connection errors correctly
 
