--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -1,9 +1,18 @@
-V0.0.9 (2017-xx-xx):
+V1.0.0 (2018-10-02):
 ====================
 
-* New features:
+* Changes:
+  * Ported code to Python 3
+  * Code cleanup using pylint
+  * Added util/JsonUtil.py to encode byte strings for storing them as json objects
+  * Added docs/development-procedures.txt which documents development procedures
+* Features:
+  * New MissingMatchPathListValueDetector to detect stream interuption
   * Added parsing support for kernel IP layer martian package messages
   * Systemd parsing of apt invocation messages.
+* Bugfixes:
+  * AnalysisChild: handle remote control client connection errors correctly
+  * Various bugfixes
 
 V0.0.8 (2017-05-30):
 ====================
