--- a/source/debian/NEWS
+++ b/source/debian/NEWS
@@ -1,3 +1,19 @@
+logdata-anomaly-miner (1.0.1~pre0) bionic; urgency=low
+
+  Changes:
+  * Updated and improved ParanoidInstallationGuide
+  Bugfixes including:
+  * Fixed dependencies in Debian packaging
+  * Fixed typo in various analysis components
+  * Fixed import of ModelElementInterface in various parsing components
+  * Fixed issues with byte/string comparison
+  * Fixed issue in DecimalIntegerValueModelElement, when parsing integer
+    including sign and padding character
+  * Fixed unnecessary long blocking time in SimpleMultisourceAtomSync
+  * Changed minimum matchLen in DelimitedDataModelElement to 1 byte
+
+ -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at>  Thu,  07 Feb 2019 17:00:00 +0000
+
 logdata-anomaly-miner (1.0.0) bionic; urgency=low
   
   Changes:
