--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -1,3 +1,19 @@
+V1.0.1 (2019-02-07):
+====================
+
+* Changes:
+  * Updated and improved ParanoidInstallationGuide
+* Bugfixes including:
+  * Fixed dependencies in Debian packaging
+  * Fixed typo in various analysis components
+  * Fixed import of ModelElementInterface in various parsing components
+  * Fixed issues with byte/string comparison
+  * Fixed issue in DecimalIntegerValueModelElement, when parsing
+    integer including sign and padding character
+  * Fixed unnecessary long blocking time in SimpleMultisourceAtomSync
+  * Changed minum matchLen in DelimitedDataModelElement to 1 byte
+
+
 V1.0.0 (2018-10-02):
 ====================
 
