--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -1,4 +1,4 @@
-V1.0.1 (2019-07-05):
+V1.0.1 (2019-07-11):
 ====================
 
 * Changes:
@@ -18,6 +18,7 @@ V1.0.1 (2019-07-05):
   * Changed minum matchLen in DelimitedDataModelElement to 1 byte
   * Fixed NewMatchPathValueDetector list of transferred parameters in
     receiveAtom
+  * Fixed timezone offset in ModuloTimeMatchRule
   * Minor bugfixes
 
 
