--- a/source/root/usr/share/doc/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/aminer/Changelog.txt
@@ -1,4 +1,4 @@
-V1.0.1 (2019-07-11):
+V1.0.1 (2019-12-03):
 ====================
 
 * Changes:
@@ -7,6 +7,11 @@ V1.0.1 (2019-07-11):
   * Added functions getNameByComponent and getIdByComponent to
     AnalysisChild.py
   * Update DefaultMailNotificationEventHandler.py to python3
+  * Add EventData.py to refactor output.
+  * Refactor and harmonize output of all classes.
+*Features:
+  * Added VerboseUnparsedAtomHandler that applies the DebugMatchContext to
+    unparsed log lines
 * Bugfixes including:
   * Fixed dependencies in Debian packaging
   * Fixed typo in various analysis components
@@ -20,7 +25,6 @@ V1.0.1 (2019-07-11):
     receiveAtom
   * Fixed timezone offset in ModuloTimeMatchRule
   * Minor bugfixes
-
 
 V1.0.0 (2018-10-02):
 ====================
